modification of my codes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap">
     <title>Portfolio page </title>
 </head>
 <body>
@@ -18,11 +19,11 @@
                     <li class="content"><a href="https://citec-47.github.io/live-demo/#contact">Contact</a></li>
                 </ul>
             </menu>
-            <nav class="statusbar">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-                
+            <nav class="status">
+                <div class="parallel"><img src="/Images/Icon - Menu.png" alt="menu"></div>
+                <div class="parallel"><img src="/Images/Icon - Menu.png" alt="menu"></div>
+                <div class="parallel"><img src="/Images/Icon - Menu.png" alt="menu"></div>
+
             </nav>
         </header>
         
