adjustment of the layout

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <li class="content"><a href="https://citec-47.github.io/live-demo/#contact">Contact</a></li>
                 </ul>
             </menu>
-            <nav class="status">
-                <div class="parallel"><img src="/Images/Icon - Menu.png" alt="menu"></div>
-                <div class="parallel"><img src="/Images/Icon - Menu.png" alt="menu"></div>
-                <div class="parallel"><img src="/Images/Icon - Menu.png" alt="menu"></div>
-
+          
+             <nav id="statusbar">
+                <div class="parallel"></div>
+                <div class="parallel"></div>
+                <div class="parallel"></div>
             </nav>
         </header>
         
