styling of  background images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="home">
                     <li class="content"><a href="#">Portoflio</a></li>
                     <li class="content"><a href="https://citec-47.github.io/frontendmasters/">About</a></li>
-                    <li class="content"><a href="https://citec-47.github.io/live-demo/#contact">Contact</a></li>
+                    <li class="content"><a href="https://citec-47.github.io/Desk-version/">Contact</a></li>
                 </ul>
             </menu>
           
