adjustment of background syling

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </menu>
           
              <nav id="statusbar">
-                <div class="parallel"></div>
-                <div class="parallel"></div>
-                <div class="parallel"></div>
+                <div class="parallel"><a href="#"></a></div>
+                <div class="parallel"><a href="#"></a></div>
+                <div class="parallel"><a href="#"></a></div>
             </nav>
         </header>
         
