--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
             </menu>
           
              <nav id="statusbar">
-                <div class="parallel"><a href="#"></a></div>
-                <div class="parallel"><a href="#"></a></div>
-                <div class="parallel"><a href="#"></a></div>
+                <span class="parallel"><a href="#"></a></span>
+                <span class="parallel"><a href="#"></a></span>
+                <span class="parallel"><a href="#"></a></span>
             </nav>
         </header>
         
         <section id="sectionA">
-            <h1 class="introA"><marquee>I’m Ndonyi
+            <h2 class="introA"><marquee>I’m Ndonyi
                 <br>
-                Glad to see <span>you!</span></marquee></h1>
-                <p class="para-one">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+                Glad to see <span>you!</span></marquee></h2>
+                <p class="para-one">I’m a software developer! I can help you build a product , 
+                    feature or website Look through some of my work and experience! If you like what you see and 
+                    have a project you need coded, don’t hestiate to contact me.</p>
                 <div class="order">
                     <h3><a href="#">LET’S CONNECT</a></h3>
                     <ul>
@@ -48,7 +50,7 @@
     <div class="cardern">
       <img src="./Images/numberone.png" alt="image">
       <div class="table">
-        <h1>Tonic</h1>
+        <h2>Tonic</h2>
         <ul>
            <li><h3>CANOPY</h3></li>
            <li class="list"><img  src="Images/ball.png" alt="pic"></li>
@@ -71,8 +73,8 @@
     <div class="cardernan">
       <img src="Images/imagetwo.png" alt="Calculator">
       <div class="table2">
-        <h1 class="hone">Multi-Post
-            Stories</h1>
+        <h2 class="hone">Multi-Post
+            Stories</h2>
             <ul>
                 <li><h3>CANOPY</h3></li>
                 <li class="list"><img  src="Images/ball.png" alt="pic">
@@ -96,7 +98,7 @@
     <div class="cardern">
       <img src="Images/numberfour.png" alt="pro">
       <div class="table">
-        <h1 class="hone">Facebook 360</h1>
+        <h2 class="hone">Facebook 360</h2>
         <ul>
             <li><h3>CANOPY</h3></li>
             <li class="list"><img  src="Images/ball.png" alt="pic">
@@ -119,7 +121,7 @@
     <div class="cardernan">
       <img src="Images/numbertwo.png" alt="image">
       <div class="table">
-        <h1 class="hone">Uber Navigation</h1>
+        <h2 class="hone">Uber Navigation</h2>
         <ul>
             <li><h3>CANOPY</h3></li>
             <li class="list"><img  src="Images/ball.png" alt="pic">
@@ -140,9 +142,9 @@
 </section>
 <section class="about">
     <div class="explain">
-        <h1 class="about_text">About
+        <h2 class="about_text">About
             <br>
-            Myself</h1>
+            Myself</h2>
             <h4 class="introL">Hello I’m a software developer!
                  I can help you build a product , feature or website Look
                   through some of my work and experience! If you like what 
@@ -177,7 +179,7 @@
     <section class="forms">
     <div class="sectfour">
         <div class="fill" id="contact">
-        <h1 class="hones">Contact me</h1>
+        <h2 class="hones">Contact me</h2>
         <p class="pras">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
         </div>
     <form action="https://formspree.io/f/xayzojej" method="post">
