--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                     <li class="content"><a href="https://citec-47.github.io/frontendmasters/">About</a></li>
                     <li class="content"><a href="https://citec-47.github.io/Desk-version/">Contact</a></li>
                 </ul>
-            
+              
                 <ul id="home1">
+                    <h1 id="close">X</h1>
                     <li class="content1"><a href="#">Portoflio</a></li>
                     <li class="content1"><a href="https://citec-47.github.io/frontendmasters/">About</a></li>
                     <li class="content1"><a href="https://citec-47.github.io/Desk-version/">Contact</a></li>
