adding blur effect

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               
                 <ul id="home1">
                     <h1 id="close">X</h1>
-                    <li class="content1"><a href="#">Portoflio</a></li>
-                    <li class="content1"><a href="https://citec-47.github.io/frontendmasters/">About</a></li>
-                    <li class="content1"><a href="https://citec-47.github.io/Desk-version/">Contact</a></li>
+                    <li class="content1"><a href="#" class="hom2">Portoflio</a></li>
+                    <li class="content1"><a href="https://citec-47.github.io/frontendmasters/" class="hom2">About</a></li>
+                    <li class="content1"><a href="https://citec-47.github.io/Desk-version/" class="hom2">Contact</a></li>
                 </ul>
              <nav id="statusbar">
                 <span class="parallel"><a href="#"></a></span>
