--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             
                 <ul id="home">
                     <li class="content"><a href="#">Portoflio</a></li>
-                    <li class="content"><a href="#">About</a></li>
-                    <li class="content"><a href="#">Contact</a></li>
+                    <li class="content"><a href="#About">About</a></li>
+                    <li class="content"><a href="#Contact">Contact</a></li>
                 </ul>
               
                 <ul id="home1">
                     <h1 id="close">X</h1>
                     <li class="content1"><a href="#" class="hom2">Portoflio</a></li>
-                    <li class="content1"><a href="#" class="hom2">About</a></li>
-                    <li class="content1"><a href="#" class="hom2">Contact</a></li>
+                    <li class="content1"><a href="#About" class="hom2">About</a></li>
+                    <li class="content1"><a href="#Contact" class="hom2">Contact</a></li>
                 </ul>
              <nav id="statusbar">
                 <span class="parallel"><a href="#"></a></span>
@@ -145,7 +145,7 @@
        </div>
     </div>
 </section>
-<section class="about">
+<section class="about"  id="About">
     <div class="explain">
         <h2 class="about_text">About
             <br>
@@ -183,7 +183,7 @@
 </section>
     <section class="forms">
     <div class="sectfour">
-        <div class="fill" id="contact">
+        <div class="fill" id="Contact">
         <h2 class="hones">Contact me</h2>
         <p class="pras">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
         </div>
