--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
        
         <section id="sectionA">
-            <h2 class="introA"><marquee>I’m Ndonyi
+            <h2 class="introA "><marquee>I’m Ndonyi
                 <br>
                 Glad to see <span>you!</span></marquee></h2>
                 <p class="para-one">I’m a software developer! I can help you build a product , 
@@ -42,25 +42,25 @@
                 <div class="order">
                     <h3><a href="#">LET’S CONNECT</a></h3>
                     <ul>
-                        <li><a href="#"><img src="./Images/twiter.jpg"></a></li>
-                        <li><a href="#"><img src="./Images/linkedin.jpg"></a></li>
-                        <li><a href="#"><img src="./Images/media.jpg"></a></li>
-                        <li><a href="#"><img src="./Images/github.jpg"></li>
-                        <li><a href="#"><img src="./Images/fingers.jpg"></a></li>
+                        <li><a href="#"><img src="./assets/Images/twiter.jpg"></a></li>
+                        <li><a href="#"><img src="./assets/Images/linkedin.jpg"></a></li>
+                        <li><a href="#"><img src="./assets/Images/media.jpg"></a></li>
+                        <li><a href="#"><img src="./assets/Images/github.jpg"></li>
+                        <li><a href="#"><img src="./assets/Images/fingers.jpg"></a></li>
                      </ul>
                 </div>
             </div>
 </section>
 <section class="cards">
     <div class="cardern">
-      <img src="./Images/numberone.png" alt="image">
+      <img src="./assets/Images/numberone.png" alt="image">
       <div class="table">
         <h2>Tonic</h2>
         <ul>
            <li><h3>CANOPY</h3></li>
-           <li class="list"><img  src="Images/ball.png" alt="pic"></li>
+           <li class="list"><img  src="./assets/Images/ball.png" alt="pic"></li>
             <li>Back End Dev</li>
-            <li class="list"><img  src="Images/ball.png" alt="pic">
+            <li class="list"><img  src="./assets/Images/ball.png" alt="pic">
             <li>2015</li>
         </ul>
         <p class="paraone">A daily selection of privately
@@ -76,15 +76,15 @@
 </section>
 <section class="cards">
     <div class="cardernan">
-      <img src="Images/imagetwo.png" alt="Calculator">
+      <img src="./assets/Images/imagetwo.png" alt="Calculator">
       <div class="table2">
         <h2 class="hone">Multi-Post
             Stories</h2>
             <ul>
                 <li><h3>CANOPY</h3></li>
-                <li class="list"><img  src="Images/ball.png" alt="pic">
+                <li class="list"><img  src="./assets/Images/ball.png" alt="pic">
                  <li>Back End Dev</li>
-                 <li class="list"><img  src="Images/ball.png" alt="pic">
+                 <li class="list"><img  src="./assets/Images/ball.png" alt="pic">
                  <li>2015</li>
              </ul>
         <p class="paraone">Experimental content creation feature 
@@ -101,14 +101,14 @@
 </section>
 <section class="cards">
     <div class="cardern">
-      <img src="Images/numberfour.png" alt="pro">
+      <img src="./assets/Images/numberfour.png" alt="pro">
       <div class="table">
         <h2 class="hone">Facebook 360</h2>
         <ul>
             <li><h3>CANOPY</h3></li>
-            <li class="list"><img  src="Images/ball.png" alt="pic">
+            <li class="list"><img  src="./assets/Images/ball.png" alt="pic">
              <li>Back End Dev</li>
-             <li class="list"><img  src="Images/ball.png" alt="pic">
+             <li class="list"><img  src="./assets/Images/ball.png" alt="pic">
              <li>2015</li>
          </ul>
         <p class="paraone">Exploring the future of media in Facebook's first Virtual Reality app;
@@ -124,14 +124,14 @@
 </section>
 <section class="cards">
     <div class="cardernan">
-      <img src="Images/numbertwo.png" alt="image">
+      <img src="./assets/Images/numbertwo.png" alt="image">
       <div class="table">
         <h2 class="hone">Uber Navigation</h2>
         <ul>
             <li><h3>CANOPY</h3></li>
-            <li class="list"><img  src="Images/ball.png" alt="pic">
+            <li class="list"><img  src="./assets/Images/ball.png" alt="pic">
              <li>Back End Dev</li>
-              <li class="list"><img  src="Images/ball.png" alt="pic">
+              <li class="list"><img  src="./assets/Images/ball.png" alt="pic">
              <li>2015</li>
          </ul>
         <p class="paraone">A smart assistant to make driving more safe, efficient,
@@ -157,11 +157,11 @@
                   to contact me.</h4>
             <h3>LET’S CONNECT</h3>
             <ul>
-                <li><a href="#"><img src="./Images/twiter.jpg"></a></li>
-                <li><a href="#"><img src="./Images/linkedin.jpg"></a></li>
-                <li><a href="#"><img src="./Images/media.jpg"></a></li>
-                <li><a href="#"><img src="./Images/github.jpg"></li>
-                <li><a href="#"><img src="./Images/fingers.jpg"></a></li>
+                <li><a href="#"><img src="./assets/Images/twiter.jpg"></a></li>
+                <li><a href="#"><img src="./assets/Images/linkedin.jpg"></a></li>
+                <li><a href="#"><img src="./assets/Images/media.jpg"></a></li>
+                <li><a href="#"><img src="./assets/Images/github.jpg"></li>
+                <li><a href="#"><img src="./assets/Images/fingers.jpg"></a></li>
             </ul>
     <p class="resume1">Get my resume</p>
             
@@ -169,13 +169,13 @@
     <div class="programming">
         <h2 class="codes_name">Languages</h2>
         <div class="programs">
-            <div class="program_codes"><img src="Images/script.png" alt="javascript"> <h4 class="text">JAVASCRIPT</h4></div>
-            <div class="program_codes"><img src="Images/markup.png" alt="html"> <h4 class="text">HTML</h4></div>
-            <div class="program_codes"><img src="Images/beauty.png" alt="css"> <h4 class="text">CSS</h4></div>
+            <div class="program_codes"><img src="./assets/Images/script.png" alt="javascript"> <h4 class="text">JAVASCRIPT</h4></div>
+            <div class="program_codes"><img src="./assets/Images/markup.png" alt="html"> <h4 class="text">HTML</h4></div>
+            <div class="program_codes"><img src="./assets/Images/beauty.png" alt="css"> <h4 class="text">CSS</h4></div>
           </div>
           <div class="bolo">
-            <div class="man_know"><h3>Frameworks</h3><img src="Images/prev.png" alt="frame"></div>
-            <div class="man_know"><h3>Skills</h3><img src="Images/prev.png" alt="skills"></div>
+            <div class="man_know"><h3>Frameworks</h3><img src="./assets/Images/prev.png" alt="frame"></div>
+            <div class="man_know"><h3>Skills</h3><img src="./assets/Images/prev.png" alt="skills"></div>
           </div>
       </div>
 
