modiffication of pop up

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://kit.fontawesome.com/7bfe064e41.js" crossorigin="via"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap">
     <title>My Portfolio page </title>
 </head>
@@ -45,7 +46,7 @@
                         <li><a href="#"><img src="./assets/Images/twiter.jpg"></a></li>
                         <li><a href="#"><img src="./assets/Images/linkedin.jpg"></a></li>
                         <li><a href="#"><img src="./assets/Images/media.jpg"></a></li>
-                        <li><a href="#"><img src="./assets/Images/github.jpg"></li>
+                        <li><a href="https://citec-47.github.io/Desk-version/"><img src="./assets/Images/github.jpg"></li>
                         <li><a href="#"><img src="./assets/Images/fingers.jpg"></a></li>
                      </ul>
                 </div>
