--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="https://kit.fontawesome.com/7bfe064e41.js" crossorigin="via"></script>
+    <script src="https://kit.fontawesome.com/7bfe064e41.js" linking="via"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap">
     <title>Portfolio page </title>
 </head>
