--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="https://kit.fontawesome.com/7bfe064e41.js" linking="via"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap">
-    <title>My Portfolio page </title>
+    <title>Portfolio page </title>
 </head>
 <body>
     <div class="main-one">
