--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
         <p class="pras">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
         </div>
     <form action="https://formspree.io/f/xayzojej" method="post">
-        <input type="text" maxlength="30" name="name" placeholder="Name here" id="input" required/>
-        <input type="email"  name="email" placeholder="email here" id="input" required/>
+        <input type="text" maxlength="30" name="name" placeholder="Name here" id="input" class="names" required/>
+        <input type="email"  name="email" placeholder="email here" id="input" class="mails" required/>
         <textarea id="msg"   maxlength="500"name="message" rows="10" placeholder="Please Your Message Here" required></textarea> 
         <br>
-        <button type="submit" class="submit">Get In Touch</button>
+        <button type="submi" class="submit">Get In Touch</button>
       </form> 
       </div>
   </section>
