AJUSTING THE ERROR MESSAGE

--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
         <input type="email"  name="email" placeholder="email here" id="input" class="mails" required/>
         <textarea id="msg"   maxlength="500"name="message" rows="10" placeholder="Please Your Message Here" required></textarea> 
         <br>
+        <p id="error"></p>
         <button type="submi" class="submit">Get In Touch</button>
-      </form> 
+    </form> 
       </div>
   </section>
   <script src="main.js"></script>
