--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@
 
     </div>
 </section>
-    <section class="forms">
+    <section class="forms" id="fum">
     <div class="sectfour">
         <div class="fill" id="Contact">
         <h2 class="hones">Contact me</h2>
         <p class="pras">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
         </div>
     <form action="https://formspree.io/f/xayzojej" method="post">
-        <input type="text" maxlength="30" name="name" placeholder="Name here" id="input" class="names" required/>
-        <input type="email"  name="email" placeholder="email here" id="input" class="mails" required/>
-        <textarea id="msg"   maxlength="500"name="message" rows="10" placeholder="Please Your Message Here" required></textarea> 
+        <input type="text" maxlength="30" name="name" placeholder="Name here" id="input" id="namet" class="names" required/>
+        <input type="email"  name="email" placeholder="email here" id="input" class="mails" id="emailstt" required/>
+        <textarea id="msg" id="messaget"  maxlength="500"name="message" rows="10" placeholder="Please Your Message Here" required></textarea> 
         <br>
         <p id="error"></p>
         <button type="submi" class="submit">Get In Touch</button>
