--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="https://kit.fontawesome.com/7bfe064e41.js" linking="via"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap">
-    <title>Portfolio page </title>
+    <title>My Portfolio page </title>
 </head>
 <body>
     <div class="main-one">
@@ -189,9 +189,9 @@
         <p class="pras">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
         </div>
     <form action="https://formspree.io/f/xayzojej" method="post">
-        <input type="text" maxlength="30" name="name" placeholder="Name here" id="input" id="namet" class="names" required/>
-        <input type="email"  name="email" placeholder="email here" id="input" class="mails" id="emailstt" required/>
-        <textarea id="msg" id="messaget"  maxlength="500"name="message" rows="10" placeholder="Please Your Message Here" required></textarea> 
+        <input type="text" maxlength="30" name="name" placeholder="Name here" id="input" class="names" required/>
+        <input type="email"  name="email" placeholder="email here" id="input" class="mails" required/>
+        <textarea id="msg"  class="datap" maxlength="500" rows="10" placeholder="Please Your Message Here" required></textarea> 
         <br>
         <p id="error"></p>
         <button type="submi" class="submit">Get In Touch</button>
