--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
           <ul class="social-icons" >
             <li>
               <a href="https://github.com/citec-47" target="_blank"  rel="noopener noreferrer">
-                <img src="images/github.png" class="social" alt="Github"></a>
+                <img src="./images/github.png" class="social" alt="Github"></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ndonyi-maurice-ndonyimaurice/" target="_blank"  rel="noopener noreferrer">
-                <img src="images/Linkedin.png" class="social" alt="Linkedin"></a>
+                <img src="./images/Linkedin.png" class="social" alt="Linkedin"></a>
             </li>
             <li>
               <a href="https://wellfound.com/u/ndonyi-maurice-djam" target="_blank"  rel="noopener noreferrer">
-                <img src="images/angellist.png" class="social" alt="Angellist"></a>
+                <img src="./images/angellist.png" class="social" alt="Angellist"></a>
             </li>
             <li>
               <a href="https://medium.com/@mauricendonyi40" target="_blank"  rel="noopener noreferrer">
-                <img src="images/medium.png" class="social" alt="Medium"></a>
+                <img src="./images/medium.png" class="social" alt="Medium"></a>
             </li>
           </ul>
         </div>
@@ -90,19 +90,19 @@
             <ul class="social-icons">
               <li>
                 <a href="https://github.com/citec-47" target="_blank"  rel="noopener noreferrer">
-                  <img src="images/github.png" class="social" alt="Github"></a>
+                  <img src="./images/github.png" class="social" alt="Github"></a>
               </li>
               <li>
                 <a href="https://www.linkedin.com/in/ndonyi-maurice-ndonyimaurice/" target="_blank"  rel="noopener noreferrer">
-                  <img src="images/Linkedin.png" class="social" alt="Linkedin"></a>
+                  <img src="./images/Linkedin.png" class="social" alt="Linkedin"></a>
               </li>
               <li>
                 <a href="https://wellfound.com/u/ndonyi-maurice-djam" target="_blank"  rel="noopener noreferrer">
-                  <img src="images/angellist.png" class="social" alt="Angellist"></a>
+                  <img src="./images/angellist.png" class="social" alt="Angellist"></a>
               </li>
               <li>
                 <a href="https://medium.com/@mauricendonyi40" target="_blank"  rel="noopener noreferrer">
-                  <img src="images/medium.png" class="social" alt="Medium"></a>
+                  <img src="./images/medium.png" class="social" alt="Medium"></a>
               </li>
         </div >
 
