Update depoly IMG should display

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <header class="toolbas" id="toolbas">
 
     <nav id="mobile-menu" class="mobile-nav">
-      <a id="menu-icon" href="#mobile-menu" onclick="MobileMenu()"><img src="./images/hamburger-icon.svg" alt="Menu"></a>
+      <a id="menu-icon" href="#mobile-menu" onclick="MobileMenu()"><img src="./image/hamburger-icon.svg" alt="Menu"></a>
 
       <!-- MobileMenu Only appears when Hamburguer Icon is pressed -->
       <div id="MobileMenu" >
         <a id="close-menu-bar" class="close-menu-bar" onclick="MobileMenu()" >
-          <img src="./images/close-x.svg"  alt="close menu">
+          <img src="./image/close-x.svg"  alt="close menu">
         </a>
         <a href="#section_B" onclick="MobileMenu()" class="menu">Portfolio</a>
         <a href="#about-section" onclick="MobileMenu()" class="menu">About</a>
@@ -51,19 +51,19 @@
           <ul class="social-icons" >
             <li>
               <a href="https://github.com/citec-47" target="_blank"  rel="noopener noreferrer">
-                <img src="./images/github.png" class="social" alt="Github"></a>
+                <img src="./image/github.png" class="social" alt="Github"></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ndonyi-maurice-ndonyimaurice/" target="_blank"  rel="noopener noreferrer">
-                <img src="./images/Linkedin.png" class="social" alt="Linkedin"></a>
+                <img src="./image/Linkedin.png" class="social" alt="Linkedin"></a>
             </li>
             <li>
               <a href="https://wellfound.com/u/ndonyi-maurice-djam" target="_blank"  rel="noopener noreferrer">
-                <img src="./images/angellist.png" class="social" alt="Angellist"></a>
+                <img src="./image/angellist.png" class="social" alt="Angellist"></a>
             </li>
             <li>
               <a href="https://medium.com/@mauricendonyi40" target="_blank"  rel="noopener noreferrer">
-                <img src="./images/medium.png" class="social" alt="Medium"></a>
+                <img src="./image/medium.png" class="social" alt="Medium"></a>
             </li>
           </ul>
         </div>
@@ -90,19 +90,19 @@
             <ul class="social-icons">
               <li>
                 <a href="https://github.com/citec-47" target="_blank"  rel="noopener noreferrer">
-                  <img src="./images/github.png" class="social" alt="Github"></a>
+                  <img src="./image/github.png" class="social" alt="Github"></a>
               </li>
               <li>
                 <a href="https://www.linkedin.com/in/ndonyi-maurice-ndonyimaurice/" target="_blank"  rel="noopener noreferrer">
-                  <img src="./images/Linkedin.png" class="social" alt="Linkedin"></a>
+                  <img src="./image/Linkedin.png" class="social" alt="Linkedin"></a>
               </li>
               <li>
                 <a href="https://wellfound.com/u/ndonyi-maurice-djam" target="_blank"  rel="noopener noreferrer">
-                  <img src="./images/angellist.png" class="social" alt="Angellist"></a>
+                  <img src="./image/angellist.png" class="social" alt="Angellist"></a>
               </li>
               <li>
                 <a href="https://medium.com/@mauricendonyi40" target="_blank"  rel="noopener noreferrer">
-                  <img src="./images/medium.png" class="social" alt="Medium"></a>
+                  <img src="./image/medium.png" class="social" alt="Medium"></a>
               </li>
         </div >
 
@@ -118,12 +118,12 @@
           <h3>Skills: Languages & Frameworks </h3>
         </div>
         <div class="ul-categories">
-          <img src="images/l-and-f.png"  alt="Frameworks">
+          <img src="./image/l-and-f.png"  alt="Frameworks">
 
 
         </div>
         <div class="ul-categories1">
-          <img src="images/l-and-f.png"  alt="Frameworks">
+          <img src="./image/l-and-f.png"  alt="Frameworks">
         </div>
       </div>
 
@@ -161,7 +161,7 @@
             </ul>
           </form>
           <p id="label-email">Please, use lower case for e-mail</p>
-          <img src="images/last-line.svg"  alt="end of portfolio">
+          <img src="./image/last-line.svg"  alt="end of portfolio">
         </div>
       </div>
     </section>
