Making the Resume in a PDF Format

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </li>
         </div >
 
-        <a href="https://doc-08-5o-prod-02-apps-viewer.googleusercontent.com/viewer2/prod-02/pdf/fkjafvudpv85bcglj7o58o15kdh8rlmj/gos5emvmnskto0ae6st7pbrp7bj8ql46/1694003475000/3/107125300045972707972/APznzaaXEAKU-DTI-M-bXt3wmzs7O111Th9lHaEk57cCIgkHqrFMwHImCtfqLW41eW_QulLmWvCJx_rGFy2CuxaGzAMsO9BaHw_FJGu9O09rBPxTYc9uYrqDKlJRCQ4-541dwx03qYGDJWycYFNNNfR0i599PeylQs2rm4EdWFP8SqywKGIaHqArQNeKS1pAfTJnlJXJSvIEtllsECS4RGZHO4qkVwJaygNycUVW-fc6FNVL-aYVZf5AejpZTG5HVLPzTwu7T6oiGD1OKQhIE9pBGxz2dn6upIFrJDuMKzRaeVwinB905PIwcgffTLAxAN8ruPOg8CU_318p3rUE84OFAPEyJydIgQLQFbi8msAGAkzTBfDXFSMz9GnCcGTy6zQpgAjK9xRUhwvqjNS_1ZqbxYIpJ7lA7Q==?authuser=0&nonce=m3ernf6dgf5nu&user=107125300045972707972&hash=37a9fi0m0bdqra568ugirugue47tpu66" target="_blank"  rel="noopener noreferrer">
+        <a href="https://drive.google.com/file/d/1fgPNjVzs36xK7fE6a8n6nE6q2xNi8a5E/view?usp=sharing" target="_blank"  rel="noopener noreferrer">
           <button type="button" class="getresume-btn">
           Get my resume</button>
         </a>
