--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </li>
         </div >
 
-        <a href="https://drive.google.com/file/d/1fgPNjVzs36xK7fE6a8n6nE6q2xNi8a5E/view" target="_blank"  rel="noopener noreferrer">
+        <a href="https://drive.google.com/file/d/1Qihkyspn7U4nJOMlDAzAwklXeZkrmEHl/view?usp=sharing" target="_blank"  rel="noopener noreferrer">
           <button type="button" class="getresume-btn">
           Get my resume</button>
         </a>
